# DataMining

./: CMakeLists.txt  README.md  recommend_threads.sh  scraper.cpp
include/: builtin_processors.h  crawler.h  downloader.h  parser.h  processing_pipeline.h  processor.h  utils.h
include/core/: thread_pool.h
include/processing/: plugin_processor.h  processing_pipeline.h  processor.h  query_system.h
plugins/: CMakeCache.txt  CMakeLists.txt  README.md  create_plugin.sh  plugin_interface.h  wikipedia_plugin.cpp
src/: crawler.cpp  main.cpp  parser.cpp  processing_pipeline.cpp  processor.cpp  query_system.cpp  utils.cpp
src/core/: crawler.cpp  downloader.cpp  thread_pool.cpp
src/libdataminer_core/: CMakeLists.txt  plugin_processor.cpp
src/processing/: main.cpp  plugin_loader.cpp  processing_pipeline.cpp  query_system.cpp
src/processors/: builtin_processors.cpp
